Small homepage tweaks

--- a/homepage/index.html
+++ b/homepage/index.html
@@ -25,11 +25,13 @@
           news: [
           {value: "blmbrg", href: "https://bloomberg.com"},
           {value: "hn", href: "https://news.ycombinator.com"},
-          {value: "fdly", href: "https://feedly.com"}
+          {value: "fdly", href: "https://feedly.com"},
+          {value: "tc", href: "https://techcrunch.com"},
         ],
         title: "News",
         social: [
           {value: "fb", href: "https://facebook.com"},
+          {value: "mssngr", href: "https://messenger.com"},
           {value: "tmblr", href: "https://tumblr.com"},
           {value: "twttr", href: "https://twitter.com"},
           ],
